--- a/Drip/wwwroot/index.html
+++ b/Drip/wwwroot/index.html
@@ -25,7 +25,7 @@
         <span class="dismiss">🗙</span>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="./css/theme-toggle.js"></script>
+    <script src="theme-toggle.js"></script>
 </body>
 
 </html>
