Update Raindrop icon SVG, remove legacy animations from AppSideBar CSS, and add favicon to index.html
* Adjust Raindrop icon SVG for improved rendering.
* Remove terminal-style animations from AppSideBar CSS to streamline styles.
* Add favicon link in index.html for better branding and user experience.

--- a/Drip/wwwroot/index.html
+++ b/Drip/wwwroot/index.html
@@ -8,6 +8,7 @@
     <base href="/" />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="Drip.styles.css" />
+    <link rel="icon" href="drip.png" />
 </head>
 
 <body>
