nvm move back to "Drip" folder. also close the sidebar when navigating

--- a/Drip/wwwroot/index.html
+++ b/Drip/wwwroot/index.html
@@ -7,7 +7,7 @@
     <title>drip</title>
     <base href="/" />
     <link rel="stylesheet" href="css/app.css" />
-    <link rel="stylesheet" href="Drip.Demo.styles.css" />
+    <link rel="stylesheet" href="Drip.styles.css" />
     <link rel="icon" href="drip.png" />
 </head>
 
