created new project; begin moving styles over

--- a/Drip.V1/wwwroot/index.html
+++ b/Drip.V1/wwwroot/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Drip</title>
+    <title>drip</title>
     <base href="/" />
     <link rel="stylesheet" href="css/app.css" />
-    <!--suppress HtmlUnknownTarget -->
-    <link href="Drip.styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="Drip.styles.css" />
+    <link rel="icon" href="drip.png" />
 </head>
 
 <body>
@@ -25,8 +25,8 @@
         <a href="." class="reload">Reload</a>
         <span class="dismiss">🗙</span>
     </div>
-    <!--suppress HtmlUnknownTarget -->
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="theme-toggle.js"></script>
 </body>
 
 </html>
