Implement dark mode and sidebar toggle functionality; refactor related components and styles for improved layout

--- a/Drip/wwwroot/index.html
+++ b/Drip/wwwroot/index.html
@@ -27,6 +27,7 @@
     </div>
     <!--suppress HtmlUnknownTarget -->
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
