Add loading component and OpenAPI document loader; enhance layout and styles for improved user experience

--- a/Drip/wwwroot/index.html
+++ b/Drip/wwwroot/index.html
@@ -13,11 +13,10 @@
 
 <body>
     <div id="app">
-        <svg class="loading-progress">
-            <circle r="40%" cx="50%" cy="50%" />
-            <circle r="40%" cx="50%" cy="50%" />
-        </svg>
-        <div class="loading-progress-text"></div>
+        <div class="loading-container">
+            <div class="loading-spinner"></div>
+            <p class="loading-text">Loading application...</p>
+        </div>
     </div>
 
     <div id="blazor-error-ui">
